# fps

./: Cargo.toml  design_doc.txt
assets/: cozette_hidpi.otb  playground.blend  playground.blend1  playground2.glb  playground3.glb
assets/AshesWeaponsV357/: CVARINFO.txt  Credits.txt  DECALDEFS.txt  DECORATE.TXT  Footstep  HRFLASH.txt  HudSwap.txt  KEYCONF.txt  MODKITS.txt  Menudef.txt  PNAMES.lmp  SOLARPOWER  Sndinfo.txt  TERRAIN  TEXTURES.txt  VEHICLE.txt  Zscript.txt  animdefs.txt  changelog.txt  firecheck.acs  gldefs.txt  language.txt  loadacs.txt  mapinfo.txt  sbarinfo.txt
assets/AshesWeaponsV357/Actors/Effects/: Effects.txt
assets/AshesWeaponsV357/Actors/Items/: Ammo.txt  Armor.txt  Health.txt  POWER.txt
assets/AshesWeaponsV357/Actors/PLAYER/: LUCY.txt  Tesla79.txt  player.txt
assets/AshesWeaponsV357/Actors/Weapons/: Ar15.txt  Crowbar.txt  FAL.txt  Glock.txt  Greaser.txt  Hammer.txt  Ingram.txt  (+12 more)
assets/AshesWeaponsV357/Graphics/: MBENCH01  MBENCH02  MBENCH03  MBENCH04  MBENCH05  MBENCH06  MBENCH07  MBENCH08  MBENCH09  MBENCH10  MBENCH11  MBENCH12  MBENCH13  MBENCH14  MBENCH15  MBENCH16  MBENCH17  MBENCH18  MBENCH19  MBENCH20  MBENCH21  MBENCH22  MBENCH23  MBENCH24  MBENCH25  MBENCH26  MBENCH27  MBENCH28  MBENCH29  MBENCH30  MBENCH31  MBENCH32  MBENCH33  MBENCH34  MBENCH35  MBENCH36  MBENCH37  MBENCH38  MBENCH39  STKEYS0  (+9 more)
assets/AshesWeaponsV357/Zscript/: Flashlight.zc
assets/AshesWeaponsV357/acs/: VEHICLE.lmp
examples/: lol.rs
src/: camera_plugin.rs  character_controller.rs  gun_play.rs  input_plugin.rs  inventory.rs  lib.rs  plugin.rs  ui.rs
(+92 files in other folders)
