[package]
name = "fps"
version = "0.1.0"
edition = "2024"

[dependencies]
avian3d = { version = "0.3.1", default-features = true, features = [
    "diagnostic_ui",
] }
bevy = "0.16.1"

#bevy_enhanced_input = "0.18.2"
bevy_framepace = "0.19.1"

iyes_perf_ui = "0.5.0"
ratatui = { version = "0.29.0", default-features = false }
soft_ratatui = { path = "../soft_ratatui" ,default-features=false, features = ["bdf-parser"]}
